add 4x multisample texture fetch in compute shader
Signed-off-by: Yuehang Wu <yuehan9.wu@gmail.com>

--- a/render/src/Makefile.am
+++ b/render/src/Makefile.am
@@ -211,3 +211,7 @@ multisample_blit_renderbuffer_CXXFLAGS = $(AM_CXXFLAGS)
 bin_PROGRAMS += multisample_texture_fetch
 multisample_texture_fetch_SOURCES = multisample_texture_fetch.cpp
 multisample_texture_fetch_CXXFLAGS = $(AM_CXXFLAGS)
+
+bin_PROGRAMS += multisample_draw_then_compute
+multisample_draw_then_compute_SOURCES = multisample_draw_then_compute.cpp
+multisample_draw_then_compute_CXXFLAGS = $(AM_CXXFLAGS)
