add dFdy dFdx demo
Signed-off-by: Yuehang Wu <yuehan9.wu@gmail.com>

--- a/render/src/Makefile.am
+++ b/render/src/Makefile.am
@@ -215,3 +215,7 @@ multisample_texture_fetch_CXXFLAGS = $(AM_CXXFLAGS)
 bin_PROGRAMS += multisample_draw_then_compute
 multisample_draw_then_compute_SOURCES = multisample_draw_then_compute.cpp
 multisample_draw_then_compute_CXXFLAGS = $(AM_CXXFLAGS)
+
+bin_PROGRAMS += dfdx_dfdy
+dfdx_dfdy_SOURCES = dfdx_dfdy.cpp
+dfdx_dfdy_CXXFLAGS = $(AM_CXXFLAGS)
