add blinn-phong model
Signed-off-by: Yuehang Wu <yuehan9.wu@gmail.com>

--- a/render/src/Makefile.am
+++ b/render/src/Makefile.am
@@ -278,3 +278,7 @@ cartoonify_CXXFLAGS = $(AM_CXXFLAGS)
 bin_PROGRAMS += alpha_map
 alpha_map_SOURCES = alpha_map.cpp
 alpha_map_CXXFLAGS = $(AM_CXXFLAGS)
+
+bin_PROGRAMS += blinn_phong_model
+blinn_phong_model_SOURCES = blinn_phong_model.cpp
+blinn_phong_model_CXXFLAGS = $(AM_CXXFLAGS)
